--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,5 +5,17 @@
     padding: 0 19px 
     margin: 0 auto
     
-@import "_header.sass"
     
+@import "_header.sass"
+@import "_promo.sass"   
+@import "_button.sass"
+
+.gradient 
+    width: 400px
+    height: 400px 
+    position: absolute
+    left: -292px;
+    top: -282px;
+    background: radial-gradient(circle closest-side,rgba(255, 165, 106, 0.25) , rgba(255, 165, 106, 0.0))
+    
+ 
