--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -11,6 +11,7 @@
     font-size: 20px
     color: #E28C54
     background-color: rgba(255, 165, 106, 0)
+    cursor: pointer
     &:hover
         background: linear-gradient(104.85deg, #AF612D -27.27%, #FFA56A 117.63%)
         color: #fff
@@ -20,3 +21,6 @@
     &_w170
         display: inline-block
         width: 170px
+    &__tutorial-card
+        width: 98px
+        height: 74px
