--- a/sass/_promo.sass
+++ b/sass/_promo.sass
@@ -3,7 +3,8 @@
         position: relative
         display: flex
         justify-content: flex-start
-        min-height: 775px        
+        min-height: 775px 
+        background-color: rgba(255, 165, 106, 0)       
     &_gradient     
         width: 1408px
         height: 623px             
