--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,21 +1,16 @@
-*
+*    
+    box-sizing: border-box
+body
     background-color: #32261A
 .container
     max-width: 1242px
     padding: 0 19px 
     margin: 0 auto
     
-    
+@import "_button.sass"   
 @import "_header.sass"
 @import "_promo.sass"   
-@import "_button.sass"
-
-.gradient 
-    width: 400px
-    height: 400px 
-    position: absolute
-    left: -292px;
-    top: -282px;
-    background: radial-gradient(circle closest-side,rgba(255, 165, 106, 0.25) , rgba(255, 165, 106, 0.0))
-    
+@import "_benefits.sass"
+@import "_tutorials.sass"
+@import "_tutorial_card.sass"   
  
