--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,8 +1,7 @@
 .header
-    height: 93px
+    height: 129px
     padding-top: 36px
     background-color: rgba(0, 0, 0, 0)
-    
       
     .container
         height: 93px
@@ -12,6 +11,14 @@
         background-color: rgba(0, 0, 0, 0)
         position: relative
 
+        .gradient 
+            width: 400px
+            height: 400px 
+            position: absolute
+            left: -240px;
+            top: -282px;
+            background: radial-gradient(circle closest-side,rgba(255, 165, 106, 0.25) , rgba(255, 165, 106, 0.0))
+        
     a
         z-index: 1    
     &__logo
@@ -19,8 +26,7 @@
         height: 65px
         margin-left: 7px
         background-color: rgba(0, 0, 0, 0)
-        
-        
+           
     &__nav
         display: flex
         justify-content: space-between
