--- a/sass/_benefits.sass
+++ b/sass/_benefits.sass
@@ -4,7 +4,7 @@
     position: relative
     .container
         position: relative
-        width: 1200px
+        width: 100%
         height: 214px
         background: rgba(198, 116, 62, 0.8)
         box-shadow: 13px 22px 52px rgba(0, 0, 0, 0.1)
