--- a/sass/_button.sass
+++ b/sass/_button.sass
@@ -24,3 +24,7 @@
     &__tutorial-card
         width: 98px
         height: 74px
+    &__menu
+        display: none
+        width: 100px
+        position: relative
