--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -32,6 +32,87 @@
         justify-content: space-between
         align-items: flex-start
         gap: 65px
+        transition: 0.8s all
+    &__nav-mobile 
+        display: flex
+        visibility: hidden
+        justify-content: space-around
+        flex-direction: column
+        padding: 0px
+        position: absolute
+        width: 0px
+        height: 0vh
+        background-color: #32261A
+        border: 1.5px solid #E28C54
+        border-radius: 12px
+        top: 16px
+        right: 18px
+        z-index: 3
+        transition: 0.7s all
+        overflow: hidden
+        hr
+            position: static
+            display: block
+            width: 90%
+            height: 2px
+            background-color: #E28C54
+            border: none             
+        .header__nav-link-mobile
+            line-height: 30px
+            color: #FFFFFF
+            font-family: 'Poppins', sans-serif      
+            font-weight: 500
+            text-decoration: none
+            font-size: 0px
+            transition: 0.7s all
+        .header__nav-mobile-close
+            position: absolute
+            top: 3px
+            right: -50px
+            font-size: 0px
+            z-index: 5
+            color: #FFFFFF
+            cursor: pointer
+            height: 50px
+            width: 50px      
+            transition: 0.7s all
+
+        
+    &__nav-mobile_active
+        display: flex
+        top: 16px
+        right: 18px
+        width: 250px
+        height: 60vh      
+        visibility: visible
+        padding: 20px
+        transition: 0.7s all 
+        .header__nav-link-mobile
+            line-height: 30px
+            color: #FFFFFF
+            font-family: 'Poppins', sans-serif      
+            font-weight: 500
+            text-decoration: none
+            font-size: 20px
+            transition: 0.7s all            
+        .header__nav-mobile-close
+            position: absolute
+            top: 3px
+            right: 3px
+            font-size: 40px
+            z-index: 5
+            color: #FFFFFF
+            cursor: pointer
+            height: 50px
+            width: 50px  
+        hr
+            position: static
+            display: block
+            width: 90%
+            height: 2px
+            background-color: #E28C54
+            border: none    
+        
     &__nav-link
         display: block   
         font-family: 'Poppins', sans-serif      
