--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,6 +6,8 @@
     .promo
         .container
             min-height: 600px 
+        &__gradient    
+            width: 90%
         &__item
             width: 450px
         &__title
@@ -107,6 +109,7 @@
         &__reg
             justify-content: center
             width: 130px
+            height: 50px  
             border: 1.4px solid rgba(249, 185, 133, 0.23)
             font-size: 20px
             line-height: 36px
@@ -123,6 +126,163 @@
             
     .btn__menu
         display: flex;
-/* @media (max-width: 575px)  */
-
-/* @media (max-width: 424px)  */
+    .btn
+        height: 50px   
+        font-size: 17px
+        &_promo
+            width: 150px 
+            margin-right: 30px 
+            
+        &_w170
+            width: 130px    
+            margin-top: 10px
+    
+    .promo
+        .container
+            min-height: 400px 
+        &__gradient 
+            width: 80%
+            left: 10%
+            height: 70%
+        &__item
+            width: 90%
+            margin: 50px auto 0 auto
+        &__title
+            font-size: 30px
+            line-height: 45px 
+            text-align: center   
+        &__subtitle
+            display: block
+            width: 50%
+            font-size: 18px
+            line-height: 27px    
+        &__img
+            width: 230px
+            height: 200px
+            margin-top: 0px
+            position: absolute
+            top: 110px
+            right: 16px
+            overflow: hidden
+            img
+                width: 260px  
+    .benefits 
+        .container
+        &__gradient
+            &_left
+                left: -30px
+            &_right
+                right: 0px   
+    .tutorials
+        &__title
+            font-size: 38px
+            width: 400px
+            text-align: center
+        &__star
+            top: -37px
+            right: -50px
+            width: 92px
+@media (max-width: 575px) 
+    .promo
+        &__img
+            top: 145px
+            right: 1px
+        &__title
+            height: 120px
+        &__subtitle
+            width: 55%
+            height: 100px
+    .benefits 
+        .container
+            padding: 20px 20px 
+        &__item-descr
+            margin-top: 10px
+    .tutorials
+        &__title
+            font-size: 32px
+            width: 381px
+        &__star
+            top: -35px
+            right: -23px
+            width: 80px
+@media (max-width: 425px)
+    .header
+        padding-top: 20px
+        &__logo
+            height: 40px
+        &__reg
+            width: 75px
+            height: 50px  
+            font-size: 15px
+    .btn
+        &__menu
+            width: 75px
+            font-size: 15px
+        &_promo
+            display: block
+            margin: 0 auto          
+        &_w170
+            display: block
+            margin: 20px auto       
+    .promo
+        .container
+            min-height: 550px 
+        &__gradient 
+            width: 80%
+            left: 10%
+            height: 70%
+        &__item
+            margin: 30px auto 0 auto
+            width: 90%
+        &__title           
+            font-size: 25px
+            line-height: 37px 
+            text-align: center   
+        &__subtitle
+            margin: 170px auto 41px auto
+            width: 90%
+            font-size: 15px
+            line-height: 22px  
+            text-align: center  
+        &__img
+            top: 102px
+            right: 50%
+            transform: translateX(50%)
+    .benefits
+        .container
+            flex-wrap: wrap
+            justify-content: space-around
+            height: 430px
+            width: 95%
+            padding: 20px 30px
+        &__item
+            width: 110px
+            height: 130px
+    .tutorials
+        overflow: hidden
+        &__title
+            font-size: 25px
+            width: 270px
+        &__star
+            top: -34px
+            right: -37px
+            width: 73px    
+    .tutorial-card
+        width: 90%
+        min-height: 300px
+        margin-bottom: 30px
+        padding: 30px 10px 15px 10px
+        &__title
+            font-size: 20px
+        &__price
+            font-size: 15px    
+        &__text
+            width: 130px
+            padding-left: 0px
+    .benefits 
+        .container
+        &__gradient
+            &_left
+                left: 10px
+            &_right
+                right: 10px   
