--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -56,7 +56,14 @@
         height: 60px   
         font-size: 20px
         color: #fff  
-        background: linear-gradient(104.85deg, #AF612D -27.27%, #FFA56A 117.63%)    
+        background: linear-gradient(104.85deg, #AF612D -27.27%, #FFA56A 117.63%) 
+        &_w170
+            position: relative
+            z-index: 100
+            cursor: pointer
+        &_promo
+            position: relative
+            z-index: 100  
     .promo
         .container
             display: block
@@ -239,7 +246,7 @@
             line-height: 37px 
             text-align: center   
         &__subtitle
-            margin: 170px auto 41px auto
+            margin: 170px auto 0px auto
             width: 90%
             font-size: 15px
             line-height: 22px  
